--- a/styles/style.css
+++ b/styles/style.css
@@ -80,11 +80,6 @@ nav ul li a{
     height: 698px;
     width: 100%;
     position: absolute;
-    
-   
-
-    
-
 }
 
 .first-banner h4{
@@ -92,6 +87,7 @@ nav ul li a{
     font-size: 65px;
     font-weight: bold;
     color: #252432;
+    margin-bottom: 37px;
    
 
 }
@@ -106,4 +102,9 @@ nav ul li a{
     border-radius: 10px;
     background-color: #4E47FF;
     color: #FFFFFF;
+}
+
+button:hover{
+    background-color: #3b6ae2;
+    box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
 }
