--- a/styles/style.css
+++ b/styles/style.css
@@ -19,7 +19,10 @@
     color: rgba(78, 71, 255, 1);
 }
 
-
+button:hover{
+    background-color: #3b6ae2;
+    box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
+}
 
 
 
@@ -28,6 +31,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
+    margin-bottom: 116px;
     
 }
 
@@ -104,7 +108,93 @@ nav ul li a{
     color: #FFFFFF;
 }
 
-button:hover{
-    background-color: #3b6ae2;
-    box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
+/* See it action center */
+.action-container{
+    display: flex;
+    justify-content: space-between;
+    max-width: 1140px;
+    height: 328px;
+    margin: 0 auto;
+    gap: 220px;
+    margin-bottom: 116px;
 }
+
+.action-container .field-1{
+    font-family: "Raleway", sans-serif;
+
+}
+
+.action-container .field-1 h2{
+    font-size: 42px;
+    font-weight: bold;
+    color: #252432;
+
+}
+
+.action-container .field-1 p{
+    font-size: 24px;
+    color: #25243285;
+}
+
+.launch-btn{
+    border: none;
+    width: 229px;
+    height: 48px;
+    border-radius: 10px;
+    background-color: #4E47FF;
+    color: #FFFFFF;
+
+}
+
+#wc-img{
+    border-radius: 48px;
+}
+
+
+/* User Section */
+.user-container{
+    display: flex;
+    flex-direction: column;
+    max-width: 1140px;
+    height: 306px;
+    background-color: #4d47ff21;
+    border-radius: 24px;
+    text-align: center;
+    margin: 0 auto;
+    margin-bottom: 116px;
+    padding: 50px 142px;
+
+}
+
+.text-section-1 h1{
+    font-family: "Raleway", sans-serif;
+    font-weight: bold;
+    color: #252432;
+    font-size: 38px;
+    margin-bottom: 20px;
+    
+}
+
+
+.text-section-2{
+    display: flex;
+    gap: 160px;
+    justify-content: center;
+}
+
+.text-section-2 h1{
+    font-family: "Inter", sans-serif;
+    color: rgba(78, 71, 255, 1);
+    font-weight: bold;
+    font-size: 80px;
+    margin-bottom: 0;
+    margin-top: 20px;
+}
+
+.text-section-2 p{
+    font-family: "Inter", sans-serif;
+    font-size: 20px;
+    color: #00000077;
+    margin-top: 5px;
+}
+
