--- a/styles/style.css
+++ b/styles/style.css
@@ -269,5 +269,44 @@ nav ul li a{
 
 /* Footer Section */
 .mother-container{
+    display: flex;
+    flex-direction: column;
     height: 428px;
+    background-color: #FFFFFF;
+}
+
+.bottom-text h1{
+    font-family: "Inter", sans-serif;
+    font-weight: 900;
+    font-size: 100px;
+    color:rgba(78, 71, 255, 1);
+    text-align: center;
+    margin-bottom: 0;
+}
+
+.bottom-text p{
+    font-family: "Inter", sans-serif;
+    font-size: 16px;
+    color: #0000007e;
+    text-align: center;
+    margin-top: 5px;
+    max-width: 531px;
+    margin: 0 auto;
+    color: #8987A1;
+}
+
+.bottom-nav{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 48px;
+    margin-top: 10px;
+    font-family: "Inter", sans-serif;
+    font-size: 16px;
+    
+}
+
+.bottom-nav a{
+    text-decoration: none;
+    color: #8987A1;
 }
